--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>MITxPRO - WEEK 23 MERN App</title>
+        <title>MCODE: Generic MERN App</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
