Productionizing AppName Template.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,5 +1,89 @@
+<!-- #region  H E A D E R -->
+<!-- copyright file="index.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE Incorporated Troy, MI author="Timothy J. McGuire" -->
+<!-- #region  P R E A M B L E -->
+<!-- #region  D O C U M E N T A T I O N -->
+<!--
+ *      Title:    AppName - MERN Template
+ *      Module:   Modules (./index.html)
+ *      Project:  MicroCODE 3-Tier MERN Template 'AppName'
+ *      Customer: Internal + MIT xPRO Course
+ *      Creator:  MicroCODE Incorporated
+ *      Date:     October 2022
+ *      Author:   Timothy J McGuire
+ *
+ *      Designed and Coded: 2022 MicroCODE Incorporated
+ *
+ *      This software and related materials are the property of
+ *      MicroCODE Incorporated and contain confidential and proprietary
+ *      information. This software and related materials shall not be
+ *      duplicated, disclosed to others, or used in any way without the
+ *      written of MicroCODE Incorported.
+ *
+ *
+ *      DESCRIPTION:
+ *      ------------
+ *
+ *      This module implements the Front-End landing page of our 'AppName' Template.
+ *
+ *
+ *      REFERENCES:
+ *      -----------
+ *
+ *      1. MIT xPRO CSS Style Guide
+ *         https://student.emeritus.org/courses/3291/files/2554233/download?wrap=1
+ *
+ *      2. Google HTML/CSS Style Guide
+ *         https://google.github.io/styleguide/htmlcssguide.html
+ *
+ *      3. MicroCODE JavaScript Style Guide
+ *         Local File: MCX-S02 (Internal JS Style Guide).docx
+ *         https://github.com/MicroCODEIncorporated/JavaScriptSG
+ *
+ *      4. MicroCODE HTML-CSS Style Guide
+ *         Local File: MCX-S03 (Internal HHTML-CSS Style Guide).docx
+ *         https://github.com/MicroCODEIncorporated/HTML-CSS-SG
+ *
+ *
+ *
+ *      DEMONSTRATION VIDEOS:
+ *      --------------------
+ *
+ *      1. ...
+ *
+ *
+ *
+ *      MODIFICATIONS:
+ *      --------------
+ *
+ *  Date:         By-Group:   Rev:     Description:
+ *
+ *  02-Oct-2022   TJM-MCODE  {0001}    Added MCODE template documentation.
+ *
+ *
+ *
+-->
+
+<!-- #endregion -->
+<!-- #endregion -->
+<!-- #endregion -->
+
+<!-- H T M L : page layout -->
 <!DOCTYPE html>
 <html lang="en">
+
+    <!-- #region  C S S : visual styles -->
+
+    <!-- Popular Style Sheets from BOOTSTRAP -->
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
+    <!-- Page Specific Styles -->
+    <style>
+
+    </style>
+    <!-- #endregion -->
+
+    <!-- #region  H E A D E R -->
     <head>
         <meta charset="utf-8" />
         <link rel="icon"
@@ -29,6 +113,9 @@
     -->
         <title>MCODE: Generic MERN App</title>
     </head>
+    <!-- #endregion -->
+
+    <!-- #region  B O D Y -->
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
@@ -43,4 +130,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     </body>
+    <!-- #endregion -->
+
 </html>
